--- a/css/main.css
+++ b/css/main.css
@@ -70,19 +70,20 @@ header .container{
     padding: 0 15px;
     margin: 0 10px;
     display: flex;
-}
-
-input[type="text"] {
-    outline: none;
-    border: none;
-    padding: 5px 10px;
-   
+    justify-content: center;
     
 }
 
-.logo span img {
+.logo span input[type="text"] {
+    outline: none;
+    border: none;
+    padding: 5px 10px;
+}
+
+.logo span button img{
     width: 30px;
     height: 30px;
+   
 }
 
 .logo span button {
@@ -102,10 +103,15 @@ input[type="text"] {
     text-align: center;
     justify-content: space-around;
     align-items: flex-end;
+    
+}
+.icon p:hover{
+    color: #01bfff;
+    transition: 0.5s;
 }
 .icon a img{
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 
@@ -125,27 +131,33 @@ nav .container ul{
 nav .container ul li a{
     display: inline-block;
     padding: 10px 30px;
+    transition: 0.5s;
 }
+nav .container ul li a:hover{
+    color: #01bfff;
+}
+
 
 
 /* 슬라이더 */
 
 #slider {
-    width: 100%;
+    width:100%;
     height: 500px;
     overflow: hidden;
     position: relative;
+    margin: 0 auto;
     
   
 }
 .move{
-    width: 80%;
+    width: 300%;
     height: 100%;
     margin: 0 auto;
     
 }
 .move li{
-    width: 100%;
+    width: 33.33%;
     height:100%;
     float: left;
 }
@@ -180,19 +192,22 @@ nav .container ul li a{
     top: 30%;
     translate: -50% 0;
     text-align: center;
+   
+  
+    
 }
 .textbox h2{
     color: white;
     font-size: 50px;
     letter-spacing: 30px;
-    opacity: 0.7;
+    
     text-shadow: 0 0 10px #444;
 
 }
 .textbox p{
     font-weight: 500;
     font-size: 20px;
-    opacity: 0.7;
+    
     text-shadow: 0 0 4px #ddd;
     margin: 10px;
 }
@@ -200,13 +215,14 @@ nav .container ul li a{
     padding: 0 20px;
    
     border-radius: 10px;
-    opacity: 0.6;
+    opacity: 1;
     transition: 0.4s;
-    border: 3px solid #ddd;
+     background-color: #ddd;
+    border: 3px solid white;
 }
 .textbox a:hover{
-    opacity: 1;
-    background-color: #eee;
+    opacity: 0.6;
+   
 
 }
 
@@ -231,6 +247,9 @@ nav .container ul li a{
 }
 
 
+/* 선택박스 */
+
+
 .select-box {
     width: 100%;
     height: 300px;
@@ -239,10 +258,42 @@ nav .container ul li a{
 }
 .select-box .container{
     position: absolute;
-    top: -50%;
+    top: -30%;
     left: 50%;
     translate: -50% 0;
-    background-color: aqua;
+    background-color: white;
+    border: 3px solid #01bfff;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    
+}
+.select-box .container h2{
+    width: 100%;
+    text-align: center;
+    font-size: 30px;
+
+}
+.city{
+    width: 25%;
+  
+    border: 2px solid #555;
+}
+.container select{
+    width: 25%;
+    border: 2px solid #555;
+}
+.container .date{
+    width: 25%;
+    border: 2px solid #555;
+}
+.select-box .container a{
+    width: 30%;
+    text-align: center;
+    background-color: #01bfff;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 
@@ -253,35 +304,49 @@ nav .container ul li a{
 /* 문단1 */
 
 #article1 {
-
     width: 100%;
     height: 600px;
-
-
 }
-
-#article1 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 #article1 h2 {
     width: 100%;
     text-align: center;
-    margin-top: 50px;
+   margin: 50px 0;
 
 }
 
-.tour1 {
-    width: 25%;
+.slidewrap{
+    width: 1000px;
+    height: 300px;
+    margin: 0 auto;
+    background-color: #01bfff;
+   
+}
+
+.slidewrap .tour{
+    width: 200%;
+    height: 100%;
+}
+
+.tour li {
+    width: 16.34%;
     height: 300px;
     background-color: gold;
-    margin: 0 20px;
-
-
+    float: left;
+   
 }
 
+    
+   
+
+
+
+
+.tour1 .imgbox{
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 50%;
+}
 
 
 /* 문단2 */
@@ -304,7 +369,7 @@ nav .container ul li a{
 #article3 {
     width: 100%;
     height: 600px;
-    background-color: aliceblue;
+    
 }
 
 #article3 h2 {
