--- a/css/main.css
+++ b/css/main.css
@@ -191,9 +191,7 @@ nav .container ul li a:hover{
     left: 50%;
     top: 50%;
     translate: -50% -50%;
-    
     background-color: rgba(90, 90, 90, 0.5);
-    
     width: 100%;
     height: 100%;
     display: flex;
@@ -231,8 +229,6 @@ nav .container ul li a:hover{
 }
 .textbox a:hover{
     opacity: 0.6;
-   
-
 }
 
 
@@ -335,30 +331,53 @@ nav .container ul li a:hover{
     width: 200%;
     height: 100%;
     position: absolute;
-    
-  
-   
-
 }
 .slidewrap .tour li{
     width: 16.15%;
     height: 100%;
     margin: 0 5px;
     float: left;
-    background-color: aquamarine;
-    
-    
+    border: 1px solid #555;
+}
+
+.tour1 .imgbox1{
+    width: 100%;
+    height: 60%;
+
+}
+.tour1 .imgbox1 img{
+    width: 100%;
+    height: 100%;
+}
+.tour1 .text1{
+    padding: 10px;
+}
+.tour1 .text1 p:nth-of-type(1){
+    margin: 5px ;
+    color: #555;
+    font-size: 15px;
+}
+.tour1 .text1 p:nth-of-type(2){
+    text-align: right;
+    margin: 10px 5px;
+    font-weight: bold;
+}
+
+.tour1:hover{
+    opacity: 0.8;
+   
 }
 
 .slidewrap span{
     display: inline-block;
     position: absolute;
+    border: 1px solid #ddd;
 }
 .left{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #ddd;
+    background-color: #fff;
     text-align: center;
     top: 50%;
     translate: 0 -50%;
@@ -379,7 +398,7 @@ nav .container ul li a:hover{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #ddd;
+    background-color: #fff;
     text-align: center;
     top: 50%;
     right: 0;
@@ -410,12 +429,35 @@ nav .container ul li a:hover{
     background-color: blanchedalmond;
 }
 
+/* 배너 */
 
-.vanner {
+#vanner {
     width: 100%;
     height: 150px;
-    background-color: coral;
+    background-color: #a8dff1;
 }
+#vanner .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#vanner .container img{
+    width: 200px;
+    height: 130px;
+}
+.cardtext p{
+    font-size: 20px;
+    letter-spacing: 4px;
+    padding: 5px;
+    font-weight: 500;
+}
+.cardtext span{
+    font-size: 13px;
+    color: #555;
+    padding: 5px;
+}
+
+
 
 /* 문단3 */
 
@@ -432,6 +474,7 @@ nav .container ul li a:hover{
 }
 
 .tour2 {
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -443,10 +486,39 @@ nav .container ul li a:hover{
     width: 15%;
     height: 30%;
     border-radius: 50%;
-    background-color: cornflowerblue;
-    margin: 120px 10px;
+    margin: 120px 15px;
     position: relative;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+.tour2 a:hover{
+    opacity: 1;
+}
 
+.tour2 a:nth-of-type(1){
+    background-image: url(../img/japan1.png);
+    background-position: center;
+    background-size: cover;
+}
+.tour2 a:nth-of-type(2){
+    background-image: url(../img/taiwan1.png);
+    background-position: center;
+    background-size: cover;
+}
+.tour2 a:nth-of-type(3){
+    background-image: url(../img/sea.png);
+    background-position: center;
+    background-size: cover;
+}
+.tour2 a:nth-of-type(4){
+    background-image: url(../img/hongkong.png);
+    background-position: center;
+    background-size: cover;
+}
+.tour2 a:nth-of-type(5){
+    background-image: url(../img/japan2.png);
+    background-position: center;
+    background-size: cover;
 }
 
 .tour2 a p {
@@ -454,9 +526,8 @@ nav .container ul li a:hover{
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    font-size: 20px;
-    color: white;
-
+    font-size: 25px;
+    color: #fff;
 }
 
 
@@ -477,8 +548,59 @@ nav .container ul li a:hover{
 #article5 {
     width: 100%;
     height: 700px;
-    background-color: darkorchid;
 }
+
+#article5 .container h2{
+    width: 100%;
+    text-align: center;
+
+}
+#article5 .container h2 a::after{
+    content: "";
+    background-image: url(../img/icon5.png);
+    background-size: 10px 20px;
+    display: inline-block;
+    width: 10px;
+    height: 20px;
+ 
+    margin: 0 0 0 10px;
+    
+}
+
+#article5 .container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-content: space-evenly;
+}
+.shop{
+    width: 48%;
+    height: 400px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-evenly;
+    text-align: center;
+}
+.shop img{
+    width: 90%;
+    height: 60%;
+}
+.text2 p:nth-of-type(1){
+    font-size: 15px;
+    margin-bottom: 10px;
+    color: #2982a0;
+    font-weight: 500;
+}
+.text2 p:nth-of-type(2){
+    font-size: 19px;
+    font-weight: 500;
+}
+
+
+
 
 
 /* 문단6 */
@@ -493,11 +615,18 @@ nav .container ul li a:hover{
 .footernav {
     width: 100%;
     height: 50px;
-    background-color: azure
+}
+.footernav ul{
+    display: flex;
+}
+.footernav ul li{
+    padding: 13px 20px;
+}
+.footernav ul li a:hover{
+    text-decoration: underline;
 }
 
 footer {
     width: 100%;
     height: 300px;
-    background-color: darkorange;
 }
