--- a/css/main.css
+++ b/css/main.css
@@ -426,8 +426,83 @@ nav .container ul li a:hover{
 #article2 {
     width: 100%;
     height: 700px;
-    background-color: blanchedalmond;
 }
+
+#article2 .container{
+    display: flex;
+    flex-flow: row wrap;
+   
+}
+.click1{
+    width: 50%;
+    height: 100px;
+    border: 1px solid #555;
+    text-align: center;
+    font-size: 25px;
+    padding: 30px 0;
+}
+.click2{
+    width: 50%;
+    height: 100px;
+    border: 1px solid #555;
+    text-align: center;
+    font-size: 25px;
+    padding: 30px 0;
+}
+.clickbox1{
+    width: 100%;
+    height: 500px;
+    text-align: center;
+    display: none;
+}
+.clickbox1 .imgbox2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.clickbox1 .imgbox2 a{
+    width: 23%;
+    height: 300px;
+    margin: 5% 1%;
+}
+.imgbox2 a{
+    display: flex;
+    flex-flow: row wrap;
+    text-align: left;
+
+}
+.imgbox2 a img{
+    width: 100%;
+    height: 60%;
+}
+.txt{
+    width: 100%;
+    padding: 5px;
+}
+.txt p:nth-of-type(2){
+    text-align: right;
+    color: tomato;
+}
+
+.clickbox2{
+    width: 100%;
+    height: 500px;
+    text-align: center;
+}
+.clickbox2 .imgbox2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.clickbox2 .imgbox2 a{
+    width: 23%;
+    height: 300px;
+    margin: 5% 1%;
+}
+
+
+
+
 
 /* 배너 */
 
@@ -467,9 +542,10 @@ nav .container ul li a:hover{
     
 }
 
-#article3 h2 {
-    text-align: center;
+#article3 .container h2 {
+    width: 100%;
     padding-top: 50px;
+    text-align: center;
 
 }
 
@@ -538,9 +614,34 @@ nav .container ul li a:hover{
 
 #article4 {
     width: 100%;
-    height: 500px;
-    background-color: darkturquoise;
+    height: 650px;
 }
+.video{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+video{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0.7;
+}
+.videobox{
+    width: 60%;
+    height: 60%;
+    border: 10px solid #01bfff;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+
+}
+
+
 
 /* 문단5 */
 
