--- a/css/commom.css
+++ b/css/commom.css
@@ -123,19 +123,47 @@ nav {
 }
 nav .container{
     display: flex;
+    flex-flow: row wrap;
     align-items: center;
 }
-nav .container ul{
+nav .container>ul{
     display: flex;
 }
-nav .container ul li a{
+nav .container>ul>li>a{
     display: inline-block;
-    padding: 10px 30px;
+    padding: 10px 20px;
     transition: 0.5s;
 }
-nav .container ul li a:hover{
+nav .container>ul>li>a:hover{
     color: #01bfff;
 }
+.menu{
+    width: 100%;
+    height: 250px;
+    z-index: 5;
+    display: flex;
+    background-color: white;
+    justify-content: flex-start;
+}
+.menu{
+    display: none;
+}
+.list{
+    margin: 0 30px;
+    width: 10%;
+}
+.list dl dt{
+    border-bottom: 2px solid #555;
+    font-size: large;
+    font-weight: bold;
+    padding: 10px 0;
+
+}
+
+.list dl dd li{
+    padding: 5px 0;
+}
+
 
 
 
