--- a/css/main.css
+++ b/css/main.css
@@ -67,22 +67,22 @@
 }
 .textbox h2{
     color: white;
-    font-size: 50px;
+    font-size: 5vw;
     letter-spacing: 30px;
-    
-    text-shadow: 0 0 10px #444;
+    text-shadow: 0 0 20px #444;
 
 }
 .textbox p{
     font-weight: 500;
-    font-size: 20px;
-    
-    text-shadow: 0 0 4px #ddd;
-    margin: 10px;
+    font-size: 1.2vw;
+    text-shadow: 0 0 10px #333;
+    margin-bottom: 1vw;
+    color: #ddd;
+
 }
 .textbox a{
-    padding: 0 20px;
-   
+    font-size: 0.9vw;
+    padding: 3px 20px;
     border-radius: 10px;
     opacity: 1;
     transition: 0.4s;
@@ -143,7 +143,7 @@
 }
 .city{
     width: 25%;
-  
+    height: 50px;
     border: 2px solid #555;
 }
 .container select{
@@ -164,6 +164,11 @@
     background-color: #01bfff;
     padding: 10px;
     border-radius: 10px;
+    transition: 0.5s;
+}
+.select-box .container a:hover{
+    font-weight: bold;
+    background-color: rgb(245, 242, 227);
 }
 
 
@@ -205,12 +210,20 @@
 .tour1 .imgbox1{
     width: 100%;
     height: 60%;
+    overflow: hidden;
 
 }
 .tour1 .imgbox1 img{
     width: 100%;
     height: 100%;
+    transform: scale(1);
+    transition: 0.8s;
 }
+.tour1 .imgbox1 img:hover{
+    transform: scale(1.2);
+    opacity: 0.7;
+}
+
 .tour1 .text1{
     padding: 10px;
 }
@@ -225,10 +238,8 @@
     font-weight: bold;
 }
 
-.tour1:hover{
-    opacity: 0.8;
    
-}
+
 
 .slidewrap span{
     display: inline-block;
@@ -297,19 +308,22 @@
 }
 .click1{
     width: 50%;
-    height: 100px;
-    border: 1px solid #555;
+    height: 50px;
+    border-left: 1px solid #555;
+    border-top: 1px solid #555;
+    border-right: 1px solid #555;
     text-align: center;
-    font-size: 25px;
-    padding: 30px 0;
+    font-size: 20px;
+    padding: 10px 0;
+    font-weight: bold;
 }
 .click2{
     width: 50%;
-    height: 100px;
-    border: 1px solid #555;
+    height: 50px;
+    border-bottom: 1px solid #555;
     text-align: center;
-    font-size: 25px;
-    padding: 30px 0;
+    font-size: 20px;
+    padding: 10px 0;
 }
 .clickbox1{
     width: 100%;
@@ -611,6 +625,7 @@ video{
     font-size: 19px;
     font-weight: 500;
 }
+    
 
 
 
@@ -667,7 +682,6 @@ video{
     opacity: 0.5;
 }
 .img6{
-    background-color: aliceblue;
     width: 50%;
     height: 65%;
     float: left;
@@ -678,7 +692,6 @@ video{
     width: 45%;
     height: 30%;
     margin: 1% 2.5%;
-    background-color: antiquewhite;
     float: left;
     border-radius: 10px;
     overflow: hidden;
