--- a/css/main copy.css
+++ b/css/main copy.css
@@ -60,25 +60,19 @@
     flex-flow:column wrap;
     justify-content: center;
     align-items: center;
-
-   
-  
-    
 }
 .textbox h2{
     color: white;
-    font-size: 5vw;
+    font-size: 7vw;
     letter-spacing: 30px;
     text-shadow: 0 0 20px #444;
-
 }
 .textbox p{
     font-weight: 500;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
     text-shadow: 0 0 10px #333;
     margin-bottom: 1vw;
     color: #ddd;
-
 }
 .textbox a{
     font-size: 0.9vw;
@@ -92,8 +86,6 @@
 .textbox a:hover{
     opacity: 0.6;
 }
-
-
 
 .move li .img2{
     background-image: url(../img/paris.jpg);
@@ -733,4 +725,127 @@ video{
 }
 .rightbox:nth-of-type(3){
     display: none;
+}
+
+@media (max-width:599px){
+    /* 슬라이더 */
+    
+    .textbox h2{
+        font-size: 8vw;
+    }
+    .textbox p{
+        font-size: 2vw;
+        margin: 2vw;
+    }
+    .textbox a{
+        font-size: 2vw;
+        padding: 2px 20px;
+    }
+
+    /* 선택박스 */
+    
+    .select-box .container{
+        height: 400px;
+        align-content: space-evenly;
+        top: 0;
+        left: 0;
+        translate: 0 0;
+    }
+    .select-box .container h2{
+        width: 100%;
+        text-align: center;
+        font-size: 30px;
+    
+    }
+    .city{
+        width: 80%;
+        height: 50px;
+    }
+    .container select{
+        width: 80%;
+        height: 50px;
+    }
+    .container .date{
+        width: 80%;
+        height: 50px;
+    }
+    
+    .select-box .container a{
+        width: 80%;
+    }
+    
+   
+
+}
+@media (min-width:600px) and (max-width:1216px){
+    /* 슬라이더 */
+
+    .textbox h2{
+        font-size: 8vw;
+    }
+    .textbox p{
+        font-size: 2vw;
+    }
+    .textbox a{
+        font-size: 1vw;
+    }
+
+    /* 선택박스 */
+    .select-box {
+        width: 100%;
+        height: 300px;
+        position: relative;
+        
+    }
+    .select-box .container{
+        position: absolute;
+        top: -30%;
+        left: 50%;
+        translate: -50% 0;
+        background-color: white;
+        border: 3px solid #01bfff;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+        align-content: space-evenly;
+        
+    }
+    .select-box .container h2{
+        width: 100%;
+        text-align: center;
+        font-size: 30px;
+    
+    }
+    .city{
+        width: 25%;
+        height: 50px;
+        border: 2px solid #555;
+    }
+    .container select{
+        width: 25%;
+        border: 2px solid #555;
+    }
+    .container .date{
+        width: 25%;
+        border: 2px solid #555;
+        
+    }
+    
+    
+    
+    .select-box .container a{
+        width: 30%;
+        text-align: center;
+        background-color: #01bfff;
+        padding: 10px;
+        border-radius: 10px;
+        transition: 0.5s;
+    }
+    .select-box .container a:hover{
+        font-weight: bold;
+        background-color: #FFD300;
+    }
+    
+    
+    
 }
