--- a/css/commom.css
+++ b/css/commom.css
@@ -242,7 +242,8 @@ footer .container{
     text-align: center;
 }
 
-@media (max-width:599px) {
+@media (max-width:749px) {
+    /* 헤더 */
     .container {
         width: 100%;
     }
@@ -253,9 +254,84 @@ footer .container{
         display: inline-block;
     }
     nav{display: none;}
+
+    /* 풋터 */
+.footernav {
+    width: 100%;
+    height: 50px;
+}
+.footernav ul{
+    display: flex;
+}
+
+.footernav ul li a{
+    font-size: 9px;
+    padding: 5px 5px;
+    
+}
+.footernav ul li a:hover{
+    text-decoration: underline;
+}
+
+
+
+footer {
+    width: 100%;
+    height: 300px;
+}
+footer .container{
+    display: flex;
+    align-content: space-around;
+    justify-content: space-around;
+
+}
+
+.textbox7{
+    width: 30%;
+}
+
+.textbox7:nth-of-type(2){
+    background-color: #eee;
+    border-radius: 10px;
+
+}
+.textbox7 p{
+    padding: 15px;
+}
+.textbox7 p b{
+    font-size: larger;
+}
+.textbox7 p b:nth-of-type(1){
+    font-size: xx-large;
+}
+.textbox7 p b img{
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    margin: 5px;
+}
+.textbox7:nth-of-type(3) p img{
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin: 5px;
+}
+.textbox7:nth-of-type(3) p{
+    background-color: #eee;
+    border-radius: 10px;
+}
+
+
+.copyright{
+    width: 100%;
+    font-size: 13px;
+    text-align: center;
+}
+
     
 }
 @media (min-width:600px) and (max-width:1216px) {
+    /* 헤더 */
     .container {
         width: 100%;
     }
