--- a/css/commom_media.css
+++ b/css/commom_media.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
 
 
-/* 모바일사이즈 */
 
+
+
+
+/* 모바일사이즈 */
 
 @media (max-width:749px) {
 
@@ -10,6 +13,10 @@
     .container {
         width: 100%;
     }
+    .logo h2{
+       font-size: 4vw;
+    }
+    
 
     .icon {
         display: none;
@@ -18,6 +25,14 @@
     header>.container>a {
         display: inline-block;
     }
+    header .container{
+        width: 90%;
+    }
+    .logo span{
+        width: 60%;
+        overflow: hidden;
+    }
+
     nav{
         height: auto;
     }
@@ -55,14 +70,17 @@
 
     .footernav ul {
         width: 100%;
-        height: 50px;
+        height: auto;
         justify-content: space-evenly;
-        align-items: center;
+        flex-flow: wrap row;
+        margin: 15px 0;
     }
 
     .footernav ul li {
+        width: 20%;
         padding: 0;
-        font-size: 10px;
+        font-size: 2.5vw;
+        margin: 2%;
     }
 
 
@@ -82,13 +100,13 @@
     }
 
     .textbox7 {
-        width: 48%;
-        margin: 10px 0;
+        width: 80%;
+        margin: 3% 0;
     }
 
     .textbox7 p {
         font-size: 12px;
-        padding: 5px;
+        padding: 3%;
     }
 
     .textbox7:nth-of-type(3) {
@@ -119,10 +137,15 @@
         width: 100%;
     }
 
+    header .container{
+        width: 90%;
+    }
+    
+
     .icon {
         display: none;
     }
-
+    
     header>.container>a {
         display: inline-block;
     }
@@ -209,4 +232,23 @@
     }
 
 
+}
+
+@media (max-width:499px) {
+
+    .logo {
+        width: 100%;
+        display: flex;
+        justify-content:flex-start;
+        margin:  0 2%;
+    }
+
+    .logo span {
+        display: none;
+    }
+    .logo h2{
+        margin: 0 2%;
+        font-size: 20px;
+     }
+    
 }
