--- a/css/main.css
+++ b/css/main.css
@@ -238,8 +238,6 @@
     font-weight: bold;
 }
 
-   
-
 
 .slidewrap span{
     display: inline-block;
@@ -534,8 +532,8 @@ video{
     opacity: 0.6;
 }
 .videobox{
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 65%;
     border: 1.0vw solid #01bfff;
     position: absolute;
     text-align: center;
@@ -549,12 +547,12 @@ video{
 
 }
 .videobox p{
-    line-height: 2.5vw;
-    font-size: 1.0vw;
+    line-height: 50px;
+    font-size: 20px;
 }
 .videobox p b{
     letter-spacing: 1.0vw;
-    font-size: 2.5vw;
+    font-size: 50px;
 }
 .videobox p b::after{
     content: "";
@@ -567,12 +565,12 @@ video{
     vertical-align: super;
 }
 .videobox button{
-    width: 7.8vw;
-    height: 2.1vw;
+    width: 200px;
+    height: 40px;
     border: none;
     opacity: 0.5;
     transition: 0.4s;
-    font-size: 0.8vw;
+    font-size: 18px;
     margin: 0.8vw;
 }
 .videobox button:hover{
@@ -676,12 +674,13 @@ video{
     padding: 12px 15px;
     color: white;
     cursor: pointer;
-    transition: 0.3s;
+   opacity: 0.7;
 }
-.leftbox ul li:hover{
-    opacity: 0.7;
-    
+.leftbox ul li.yellow{
+    opacity: 1;
+
 }
+
 .leftbox ul li b{
     float: right;
 }
