--- a/css/detail.css
+++ b/css/detail.css
@@ -76,6 +76,7 @@
     height: 22px;
     overflow: hidden;
     background: url(../img/star.png)no-repeat;
+    cursor: pointer;
    }
    .star-rating span{
     display: inline-block;
@@ -108,6 +109,7 @@
 .textbox1 .table dl{
     display: flex;
     border-bottom: 1px solid #eee;
+    cursor: pointer;
 }
 
 .textbox1 .table dl dt{
@@ -157,10 +159,56 @@ hr{
 
 /* 선택박스 */
 .selectbox {
-    background-color: chocolate;
     width: 30%;
     height: 600px;
     border-radius: 10px;
+}
+
+.selectbox .ess {
+    border: 1px solid #555;
+    border-radius: 10px;
+    padding: 20px;
+
+}
+.adult dl{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.adult dl dt{
+    padding: 10px 0;
+}
+.adult dl dt p{
+    font-size: 14px;
+    color: #666;
+}
+.adult dl dt b{
+    font-size: 25px;
+}
+.adult dl dd{
+    padding: 10px 0;
+}
+
+.ess>p{
+    font-size: 14px;
+}
+.selectbox>dl{
+    display: flex;
+    justify-content: space-between;
+}
+.selectbox>dl:nth-of-type(1){
+    border-bottom: 1px solid #999;
+}
+
+.selectbox .btn1{
+    margin-left: 0.5%;
+    width: 49%;
+}
+.selectbox .btn2{
+    width: 49%;
+}
+.selectbox .btn3{
+    width: 100%;
 }
 
 
