--- a/css/detail.css
+++ b/css/detail.css
@@ -188,7 +188,32 @@ hr{
 .adult dl dd{
     padding: 10px 0;
 }
-
+.minus{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+.plus{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+.count{
+    text-align: center;
+    border: none;
+    font-size: 20px;
+    width: 40px;
+    outline: none;
+}
 .ess>p{
     font-size: 14px;
 }
@@ -196,19 +221,39 @@ hr{
     display: flex;
     justify-content: space-between;
 }
-.selectbox>dl:nth-of-type(1){
+.selectbox>dl{
     border-bottom: 1px solid #999;
+    margin: 20px 0;
+    line-height: 50px;
+    font-size: 20px;
 }
-
+.selectbox button{
+  padding: 10px; 
+  margin: 10px 0;
+  font-size: 16px;
+  border: 1px solid #999;
+  color: #444;
+  cursor: pointer;
+  border-radius: 10px;
+}
 .selectbox .btn1{
-    margin-left: 0.5%;
-    width: 49%;
+    width: 100%;
+  font-size: 20px;
+  background-color: #01bfff;
 }
 .selectbox .btn2{
     width: 49%;
+    margin-right: 1%;
+    background-color: white;
 }
+
 .selectbox .btn3{
-    width: 100%;
+    width: 49%;
+    background-color: white;
+}
+.selectbox button:hover{
+    border: 1px solid black;
+ font-weight: bold;
 }
 
 
@@ -258,28 +303,32 @@ hr{
     height: 200px;
     background-color: #eee;
     border-radius: 10px;
-    padding: 25px;
+    padding: 20px;
 }
 
 .box2 table{
     width: 100%;
-    font-size: 20px;
+    font-size: 18px;
 
 }
 
 .box2 button{
     width: 100%;
-    height: 38px;
+    height: 40px;
     font-size: large;
     cursor: pointer;
     border-radius: 10px;
-    margin-top: 15px;
+    margin-top: 28px;
 }
 .box2 button:hover{
     background-color: #01bfff;
     transition: 0.5s;
 }
 
+.box2 p:nth-of-type(1){
+    font-size: 20px;
+    margin-bottom: 60px;
+}
 
 
 
@@ -308,6 +357,7 @@ hr{
 
 .intro{
     width: 100%;
+    display: none;
 }
 .intro>h2{
    width: 95%;
@@ -439,5 +489,44 @@ hr{
     width: 100%;
 }
 
+/* 상세정보 */
+.detail {
+    width: 100%;
+}
 
+.de_top h3{
+    font-size: 20px;
+    margin: 30px 0 20px 0;
+}
+
+.de_top dl{
+    line-height: 30px;
+}
+
+.de_top p{
+    margin: 40px 0;
+}
+.de_top p:nth-of-type(1){
+    font-weight:bold;
+    color: tomato;
+}
+.dt_hide{
+    line-height: 30px;
+    margin-bottom: 100px;
+    display: none;
+}
+.dt_hide dd{
+    padding: 13px 0;
+}
+
+.detail button{
+    width: 100%;
+    padding: 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid #999;
+    margin-bottom: 100px;
+
+}
 
