--- a/css/detail.css
+++ b/css/detail.css
@@ -4,7 +4,7 @@
 
 #content1 {
     width: 100%;
-    height: 550px;
+    height: 500px;
 }
 
 #content1 .container {
@@ -110,6 +110,7 @@
     display: flex;
     border-bottom: 1px solid #eee;
     cursor: pointer;
+    position: relative;
 }
 
 .textbox1 .table dl dt{
@@ -128,8 +129,9 @@
     display: inline-block;
     width: 10px;
     height: 15px;
-    vertical-align: sub;
-    margin-left: 100px;
+    position: absolute;
+    right: 0;
+    top: 25px;
 }
 
 
@@ -160,8 +162,10 @@ hr{
 /* 선택박스 */
 .selectbox {
     width: 30%;
-    height: 600px;
+    height: auto;
     border-radius: 10px;
+    position: sticky;
+    top: 0;
 }
 
 .selectbox .ess {
@@ -196,7 +200,9 @@ hr{
     background-color: white;
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 }
+
 .plus{
     width: 40px;
     height: 40px;
@@ -205,8 +211,9 @@ hr{
     background-color: white;
     font-size: 20px;
     font-weight: bold;
-    
+    cursor: pointer;
 }
+
 .count{
     text-align: center;
     border: none;
@@ -214,6 +221,35 @@ hr{
     width: 40px;
     outline: none;
 }
+/* .minus1, .minus2, .minus3{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.plus1, .plus2, .plus3{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.count1, .count2, .count3{
+    text-align: center;
+    border: none;
+    font-size: 20px;
+    width: 40px;
+    outline: none;
+} */
 .ess>p{
     font-size: 14px;
 }
@@ -307,48 +343,73 @@ hr{
 .box2 table{
     width: 100%;
     font-size: 18px;
+    margin: 10px 0 ;
 
 }
 
 .box2 button{
     width: 100%;
-    height: 40px;
+    height: 45px;
     font-size: large;
     cursor: pointer;
     border-radius: 10px;
-    margin-top: 28px;
-}
-.box2 button:hover{
-    background-color: #01bfff;
-    transition: 0.5s;
-}
-
-.box2 p:nth-of-type(1){
-    font-size: 20px;
-    margin-bottom: 60px;
+    color: #4C58FF;
+    border: 1px solid #4C58FF;
+    background-color: rgba(255, 255, 255, 0.781);
 }
 
 
-
-.travelbox ul{
-    width: 100%;
-    height: 70px;
-    display: flex;
-
-}
-.travelbox ul li{
-    width: 25%;
-    height: 70px;
-    border-bottom: 1px solid #555;
-    text-align: center;
-}
-.travelbox ul li a{
+.top_text{
     display: inline-block;
-    margin-top: 20px;
-    font-size: 20px;
+    width: 70%;
+    
+}
+.top_img{
+    display: inline-block;
+    width: 75px;
+    background-image:url(../img/logo.png);
+    height: 70px;
+    background-size:contain;
+    background-repeat: no-repeat;
+    position: relative;
+    top: 0;
+    left: 20px;
+    animation: navi 4s linear infinite ;
+}
+@keyframes navi{
+    0%{top: -50px;}
+    50%{width: 50px;}
+    100%{top: -50px;}
 }
 
+.top_text p:nth-of-type(1){
+    font-size: 20px;
+    margin:15px 0 50px 0;
+}.top_text p:nth-of-type(2){
+    font-size: 15px;
+   
+}
+#subNav{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    border-bottom: 2px solid #ddd;
 
+}
+#subNav li{
+    width: 25%;
+    height: 100%;
+    
+    text-align: center;
+    font-size: 20px;
+    padding-top: 15px;
+    cursor: pointer;
+}
+
+.navCss{
+    border-bottom: 4px solid #ddd;
+    font-weight : bold;
+}
 
 
 /* 상품소개 */
@@ -487,6 +548,110 @@ hr{
     width: 100%;
     display: none;
 }
+
+.schedule>p{
+    margin: 30px 0;
+    font-size: 16px;
+    color: #999;
+    
+}
+.scheduleInfo{
+    margin-bottom: 70px;
+    border-bottom: 5px solid #eee;
+}
+.scheduleInfo p{
+    font-size: 25px;
+    font-weight: bold;
+}
+.scheduleInfo p small{
+    padding: 10px;
+    color: #999;
+    font-size: 18px;
+}
+.scheduleInfo ul{
+    margin: 40px 0;
+    padding-left: 50px;
+}
+
+.scheduleInfo ul li{
+   margin: 20px 0;
+    list-style-type: disc;
+    font-size: 20px;
+    font-weight: 500;
+}
+.sch_imgbox{
+    display: flex;
+    justify-content: space-around;
+    margin: 40px 0;
+    
+}
+.sch_imgbox>div{
+    width: 40%;
+    height: 200px;
+    border-radius: 10px;
+    background-color: #4C58FF;
+}
+.sch_box1{
+    background-image: url(../img/sub8.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box2{
+    background-image: url(../img/sub11.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box3{
+    background-image: url(../img/sub12.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box4{
+    background-image: url(../img/sub5.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box5{
+    background-image: url(../img/sub13.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box6{
+    background-image: url(../img/sub7.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box7{
+    background-image: url(../img/sub15.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box8{
+    background-image: url(../img/sub16.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box9{
+    background-image: url(../img/sub3.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_box10{
+    background-image: url(../img/sub4.jpg);
+   background-size: cover;
+   overflow: hidden;
+}
+.sch_txt{
+    background-color: #4c58ff8f;
+    color: white;
+    padding: 5px 20px;
+    position: relative;
+    top: 161px;
+}
+
+
+
+
 
 /* 상세정보 */
 .detail {
